--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laberinto Calavera</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Juego carreras y calavera</title>
   </head>
   <body>
     <div class="game-container">
       <canvas id="game"></canvas>
       <div class="btns">
-        <button id="up">arriba</button>
-        <button id="left">izquierda</button>
-        <button id="right">derecha</button>
-        <button id="down">abajo</button>
+        <button id="up">Arriba</button>
+        <button id="left">Izquierda</button>
+        <button id="right">Derecha</button>
+        <button id="down">Abajo</button>
       </div>
       <div class="messages">
-        <p>ejemplo</p>
+        <p>Vidas: <span id="lives"></span></p>
+        <p>Tiempo: ⏰<span id="time"></span></p>
+        <p>Record: 🏁<span id="record"></span></p>
+        <p id="result"></p>
       </div>
     </div>
     <script src="./maps.js"></script>
